--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "parcel": "^2.13.3",
     "parcel-plugin-static-files-copy": "^1.2.4",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "tailwindcss-spinner": "^1.2.0"
   },
   "homepage": "https://hyjoo1226.github.io/Moneytto-FE/",
   "dependencies": {
